# distr-sys-itrvw

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  delivery-readiness-review.md  requirements-traceability.md  technical-decisions.md
docs/diagrams/: c4-component-account-service.mmd  c4-component-gateway.mmd  c4-container.mmd  c4-context.mmd
docs/postman/: Event-Ledger-Interview-Demo.postman_collection.json  Event-Ledger.postman_collection.json
src/account_service/: __init__.py  db.py  main.py
src/event_ledger_common/: __init__.py  contracts.py  logging.py  metrics.py  time.py  trace.py
src/gateway_service/: __init__.py  account_client.py  db.py  main.py
tests/: conftest.py  test_account_client.py  test_account_service.py  test_gateway_service.py  test_integration.py
